editting design pattern issues with the page being stretched with the introduction portion.

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav ul li a:hover {
     align-items: center;
 }
 
+/*
 .text-container {
     flex: 1;
 }
@@ -53,6 +54,27 @@ nav ul li a:hover {
 #header1 {
     padding: 150px;
 }
+*/
+
+.text-container {
+    flex: 1;
+    max-width: 60%;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+#headshot-image {
+    width: 100%;
+    max-width: 200px;
+    height: auto;
+    object-fit: cover;
+    margin-right: 10%;
+}
+
+#header1 {
+    padding: 50px;
+}
+
 
 #header2 {
     display: flex;
@@ -123,13 +145,13 @@ nav ul li a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
+    width: 45%;
     margin-right: 5%;
-    font-size: 18px;
+    font-size: 14px;
     font-family: Hack, monospace;
 }
 #about {
-    width: 40%;
+    width: 45%;
     margin-right: 5%;
 }
 
